Add stream and collection code